# SemanticCodeSearch

./: .env.example  README.md  pyproject.toml
coderag/: temp.py
coderag/config/: settings.py
coderag/data/: base_loader.py  gitlab_loader.py  local_loader.py
coderag/database/relational/: crud.py  models.py  sqlite_db.py
coderag/embedding/: embedder.py
coderag/passes/: hashing.py
coderag/reranking/: reranker.py
coderag/utils/: common.py
